trunk/Archive2/97/2a729463898c2f/output
main.cpp: In function 'int main()':
main.cpp:17:74: error: invalid conversion from '__gnu_cxx::__alloc_traits<std::allocator<unsigned int> >::value_type {aka unsigned int}' to 'const char*' [-fpermissive]
         snprintf(valueStringV, sizeof(valueStringV) - 1, swList->at(i), a);
                                                                          ^
